syntax = "proto3";

package v1.users;

option go_package = "go-grpc-playground/protos/v1/users";

service User {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUser(ListUserRequest) returns (ListUserResponse);
}

message UserInfo {
  string user_id = 1;
  string name = 2;
  string phone_number = 3;
  int32 age = 4;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  UserInfo user = 1;
}

message ListUserRequest {}

message ListUserResponse {
  repeated UserInfo users = 1;
}
